--- a/frontend/app/views/subjects/_show_inline.erb
+++ b/frontend/app/views/subjects/_show_inline.erb
@@ -2,23 +2,27 @@
    section_id = "subjects" if section_id.blank?
 %>
 
-<section id="<%= section_id %>">
-  <h3>Subject Headings</h3>
-  <div class="row-fluid">
-    <div class="span3"><strong>Identifier</strong></div>
-    <div class="span8"><strong>Subject Heading</strong></div>
-  </div>
-  <% subjects.each_with_index do | subject, index | %>
-    <div class="row-fluid">
-      <div class="span3 pull1">
-        <%= subject["ref_id"] %>
+<section id="<%= section_id %>" class="subrecord-form-dummy">
+  <h3>Subjects</h3>
+  <div class="subrecord-form-container">
+    <div class="subrecord-form-fields">
+      <div class="row-fluid">
+        <div class="span3"><strong>Identifier</strong></div>
+        <div class="span8"><strong>Subject Heading</strong></div>
       </div>
-      <div class="span8 token-list">
-        <%= render_token :object => subject,
-                         :label => Subject.from_hash(subject).display_string,
-                         :type => "subject",
-                         :uri => subject['uri'] %>
-      </div>
+      <% subjects.each_with_index do | subject, index | %>
+        <div class="row-fluid">
+          <div class="span3 pull1">
+            <%= subject["ref_id"] %>
+          </div>
+          <div class="span8 token-list">
+            <%= render_token :object => subject,
+                             :label => Subject.from_hash(subject).display_string,
+                             :type => "subject",
+                             :uri => subject['uri'] %>
+          </div>
+        </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </section>
