--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -5,6 +5,12 @@
       <%= render :partial => "sidebar" %>
    </div>
    <div class="span9 record-pane">
+     <div class="btn-group" style="float: right">
+       <% if user_can?('update_repository') %>
+         <%= link_to "Edit", {:controller => :subjects, :action => :edit, :id => @subject.id}, :class => "btn btn-small" %>
+       <% end %>
+     </div>
+
      <%= readonly_context :subject, @subject.to_hash do |readonly| %>
       <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
 
@@ -14,18 +20,22 @@
         <%= readonly.label_and_textfield "ref_id" %>
       </section>
     
-      <section id="terms">
+      <section id="terms" class="subrecord-form-dummy">
         <h3>Terms</h3>
-        <div class="row-fluid">
-          <div class="span6"><strong>Term</strong></div>
-          <div class="span6"><strong>Type</strong></div>
+        <div class="subrecord-form-container">
+          <div class="subrecord-form-fields">
+            <div class="row-fluid">
+              <div class="span6"><strong>Term</strong></div>
+              <div class="span6"><strong>Type</strong></div>
+            </div>
+            <% @subject.terms.each do | term | %>
+             <div class="row-fluid">
+                 <div class="span6"><%= term["term"] %></div>
+                 <div class="span6"><%= term["term_type"] %></div>
+             </div>
+            <% end %>
+          </div>
         </div>
-        <% @subject.terms.each do | term | %>
-         <div class="row-fluid">
-             <div class="span6"><%= term["term"] %></div>
-             <div class="span6"><%= term["term_type"] %></div>
-         </div>
-        <% end %>
       </section>
 
       <% if @subject.external_documents.length > 0 %>
