--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -287,7 +287,7 @@ section h3 {
       border: 1px solid #DDD;
       .border-radius(4px);
       margin-top: 10px;
-      padding-bottom: 10px;
+      padding: 10px;
 
       > .subrecord-form-heading {
         line-height: 36px;
