--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -15,7 +15,7 @@
     <% end %>
     
     <% if controller.action_name != "show" || @archival_object.subjects.length > 0 %>
-      <li><a href="#archival_object_subjects_">Subject Headings <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#archival_object_subjects_">Subjects <span class="icon-chevron-right"></span></a></li>
     <% end %>
     
     <% if not controller.action_name === "show" or @archival_object.notes.length > 0 %>
