--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -7,17 +7,20 @@
     <% if controller.action_name != "show" || @resource.dates.length > 0 %>
       <li><a href="#resource_dates_">Dates <span class="icon-chevron-right"></span></a></li>
     <% end %>
-    
+
     <li><a href="#finding_aid">Finding Aid <span class="icon-chevron-right"></span></a></li>
 
     <% if controller.action_name != "show" || @resource.linked_agents.length > 0 %>
       <li><a href="#resource_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if controller.action_name != "show" || @resource.subjects.length > 0 %>
+      <li><a href="#resource_subjects_">Subjects <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" or @resource.notes.length > 0 %>
       <li><a href="#notes">Notes <span class="icon-chevron-right"></span></a></li>
     <% end %>
-
 
     <% if not controller.action_name === "show" or @resource.external_documents.length > 0 %>
       <li><a href="#resource_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
