--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -28,6 +28,9 @@
               <td>
                  <div class="btn-group" style="float: right">
                    <%= link_to "View", {:controller => :subjects, :action => :show, :id => subject.id}, :class => "btn btn-mini" %>
+                   <% if user_can?('update_repository') %>
+                     <%= link_to "Edit", {:controller => :subjects, :action => :edit, :id => subject.id}, :class => "btn btn-mini" %>
+                   <% end %>
                  </div>
               </td>
             </tr>
