Change agent person name 'direct_order' to 'name_order' with options 'direct' and 'inverted'

--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -4,7 +4,7 @@
     <%= form.label_and_select "source", form.possible_options_for('source', true) %>
     <%= form.label_and_select "rules", form.possible_options_for('rules', true) %>
     <hr/>
-    <%= form.label_and_select "direct_order", form.possible_options_for("direct_order") %>
+    <%= form.label_and_select "name_order", form.possible_options_for("name_order") %>
     <%= form.label_and_textfield "prefix" %>
     <%= form.label_and_textfield "title" %>
     <%= form.label_and_textfield "primary_name" %>
