Make agent name description note a textarea

--- a/frontend/app/views/agents/name_forms/_agent_family.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_family.html.erb
@@ -18,7 +18,7 @@
     </div>
     <hr/>
     <%= form.label_and_textfield "description_type" %>
-    <%= form.label_and_textfield "description_note" %>
+    <%= form.label_and_textarea "description_note" %>
     <%= form.label_and_textfield "description_citation" %>
   </div>
 <% end %>
