Add '+1' submit to all secondary subrecord #new forms

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -189,6 +189,9 @@ section h3 {
 }
 
 .as-nav-list {
+  .btn-group {
+    width: 100%;
+  }
   .btn-submit-group {
     width: 100%;
     button:first-child {
