--- a/frontend/app/views/events/new.html.erb
+++ b/frontend/app/views/events/new.html.erb
@@ -11,7 +11,10 @@
 
         <%= render :partial => "events/form", :locals => {:form => form} %>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save Event</button>
+          <div class="btn-group">
+            <button type="submit" class="btn btn-primary">Save Event</button>
+            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary">+1</button>
+          </div>
           <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
         </div>
       </div>
