--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -10,7 +10,10 @@
         <h2><%= "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>  <span class="label label-info">Agent</span></h2>
         <%= render :partial => "agents/form", :locals => {:form => form} %>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
+          <div class="btn-group">
+            <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
+            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary">+1</button>
+          </div>
           <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
         </div>
       </div>
