--- a/frontend/app/views/collection_management_records/_sidebar.html.erb
+++ b/frontend/app/views/collection_management_records/_sidebar.html.erb
@@ -5,7 +5,12 @@
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Collection Management Record</button>
+        <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
+          <button type="submit" class="btn btn-primary">Save Collection Management Record</button>
+          <% if ["new", "create"].include?(controller.action_name) %>
+            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary">+1</button>
+          <% end %>
+        </div>
       </li>
     <% end %>
   </ul>
