--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -17,11 +17,11 @@
              data-label_plural="Agents"
              data-name="ref"
              data-path="<%= form.path %>"
-             data-url="<%= url_for :controller => :agents, :action => :list, :format => :json %>"
+             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
              data-selected='<%= selected_json %>'
              data-multiplicity="one"
              data-format_template="names[0].sort_name"
-             data-types='[]'
+             data-types='["agent_person", "agent_family", "agent_software", "agent_corporate_entity"]'
       />
       <div class="btn-group pull-right">
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
