[Delivers #41484569] Show a better error message for location forms
Specifically, for this case:

  When creating a location, a minimum of one of the following is required:

    * Barcode
    * Classification
    * Coordinate 1 Label AND Coordinate 1 Indicator

I've added a first attempt at using error codes instead of plain text
strings.  It's at odds with how we've done other cases, but we'll
probably need to revisit this soon to make our error messages
i18n-able.

--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -51,7 +51,15 @@
          <% @exceptions[:errors].each do |attr, messages| %>
             <div class="errors-for-attribute">
               <% messages.each do |msg| %>
-                <div class="error" data-target="<%= form.id_for_javascript(attr) %>"><%= I18n.t(form.path_to_i18n_key(attr)) %> - <%= msg %></div>
+                <div class="error"
+                     data-target="<%= form.id_for_javascript(attr) %>">
+                  <% if attr === 'coded_errors' %>
+                    <%# Special errors that we pull from the YML instead of inserting verbatim %>
+                    <%= I18n.t(form.path(msg)) %>
+                  <% else %>
+                    <%= I18n.t(form.path_to_i18n_key(attr)) %> - <%= msg %>
+                  <% end %>
+                </div>
               <% end %>
             </div>
          <% end %>
