--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -21,7 +21,7 @@
              data-selected='<%= selected_json %>'
              data-multiplicity="one"
              data-format_template="names[0].sort_name"
-             data-types='["agent_person", "agent_family", "agent_software", "agent_corporate_entity"]'
+             data-types='["agent"]'
       />
       <div class="btn-group pull-right">
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
