Make 'Import' button disabled upon submit and add busy image and wording tweak

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -84,6 +84,23 @@ h2 > .label {
   }
 }
 
+.btn-busy-icon {
+  display: none;
+}
+
+.btn-primary.busy.disabled .btn-busy-icon {
+  display: inline;
+}
+
+.btn .btn-busy-label,
+.btn.busy .btn-label {
+  display: none;
+}
+
+.btn.busy .btn-busy-label {
+  display: inline;
+}
+
 #object_container {
   position: relative;
 }
