--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -18,7 +18,7 @@
       <% if form.obj["ref_id"].blank? %>
         <%= form.label_and_readonly "ref_id", "<em>-- auto-generated upon save --</em>" %>
       <% else %>
-        <%= form.label_with_field "ref_id", "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["ref_id"]}</span></span>".html_safe %>
+        <%= form.label_with_field "ref_id", form.hidden_input("ref_id") + "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["ref_id"]}</span></span>".html_safe %>
       <% end %>
       <%= form.hidden_input "ref_id" %>
       <%= form.label_and_select "level", form.possible_options_for("level", true) %>
